# linkedin-jobs-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: linters.yaml
job_scraper/: companies.py  database.py  locations.py  models.py  selenium.py  settings.py
job_scraper/scrapers/: bs4.py  selenium.py
notebooks/: connections.ipynb  profile.ipynb
scripts/: install_chromedriver_ubuntu
